# server

./: .gitmodules  CMakeLists.txt  README.md  conanfile.txt
build_temp/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build_temp/Debug/generators/: BZip2-debug-x86_64-data.cmake  CMakePresets.json  assimp-Target-debug.cmake  assimp-config.cmake  assimp-debug-x86_64-data.cmake  clipper-debug-x86_64-data.cmake  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-debug-x86_64.sh  conandeps_legacy.cmake  conanrun.sh  conanrunenv-debug-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  draco-debug-x86_64-data.cmake  enet-Target-debug.cmake  enet-config.cmake  enet-debug-x86_64-data.cmake  enetTargets.cmake  glad-debug-x86_64-data.cmake  glfw3-debug-x86_64-data.cmake  glm-config.cmake  glm-debug-x86_64-data.cmake  imgui-config.cmake  imgui-debug-x86_64-data.cmake  minizip-debug-x86_64-data.cmake  module-ZLIB-debug-x86_64-data.cmake  openddlparser-debug-x86_64-data.cmake  opengl_system-debug-x86_64-data.cmake  poly2tri-debug-x86_64-data.cmake  pugixml-debug-x86_64-data.cmake  stb-Target-debug.cmake  stb-config.cmake  xorg-config.cmake  (+4 more)
build_temp/Release/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: CMakeLists.txt  glfw_shim.hpp  main.cpp
src/cbs/: Object.h
src/networking/: network.cpp  user_control.cpp  user_control.hpp
src/rendering/: Cubemap.cpp  DrawManager.cpp  DrawManager.h  Drawable.h  Line.cpp  ShaderProgram.cpp  ShaderProgram.h
src/scenes/: Scene.cpp  Scene.h
src/utilities/: Input.cpp  Input.h  Time.cpp  Time.h  Window.cpp  Window.h
(+72 files in other folders)
